@@ -2,6 +2,7 @@
 
 * v1.15 (not released)
 - Update minimum Clang/LLVM to 19
+- Fixed crash in qvariant-template-instantiation
 
 * v1.14 (April 27, 2025)
 - Clazy warnings for the following line can be disabled, for example: clazy:exclude-next-line=check1,check2
